Thu Jul 17 12:25:41 1997  Ezra Peisach  <epeisach@mit.edu>

	* dump.c (process_k5beta_record): Change variables from char to
		krb5_octet to match types in krb5_key_data.

	* ovload.c (process_ov_principal): Change "more" variable to
		krb5_boolean as argument to krb5_db_get_principal. 

Wed Mar 12 01:19:51 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* loadv4.c (argv): Check to see if the global_param's stash file
		is non-NULL before trying to strdup() it.  [PR#341, PR#394]

Tue Feb  4 21:17:09 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Tue Dec  3 16:04:24 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kdb5_util.c: fix multiply defined globals [krb5-admin/260]

Wed Nov 13 00:06:40 1996  Mark Eichin  <eichin@cygnus.com>

	* dump.c (load_db): lock the database directly (having fixed the
	lock/unlock code) to avoid reopening on every record.

Mon Nov 11 16:50:25 1996  Mark Eichin  <eichin@cygnus.com>

	* kadmin/dbutil dumpv4 expiration ("never") fixes
	* kadmin/dbutil loadv4 stashfile, default fixes

	Fri Sep 27 18:45:43 1996  Mark Eichin  <eichin@cygnus.com>

	* dump.c (read_string): fgetc doesn't return char.
	
	Wed Sep 11 23:45:11 1996  Mark Eichin  <eichin@cygnus.com>

	* loadv4.c (enter_in_v5_db): set last_pwd_change from the
	mod_time, not only the mod_princ_data.
	
	Wed Sep 11 00:02:33 1996  Mark Eichin  <eichin@cygnus.com>

	* dumpv4.c (dump_v4_iterator): detect expiration time of "never"
	and fill in a reasonable default (namely, the Cygnus 96q1 default
	of 12/31/2009.)

	* loadv4.c (v4_dump_find_default): New function. Scans a dumpfile
 	for a "default" entry, which was probably created at kdb_init time
 	and probably hasn't changed from either the MIT default of
 	12/31/1999 or the Cygnus 96q1 default of 12/31/2009.  Check for
 	either value, and replace it with 0, which is understood as
 	"never" in V5.  If verbose is set (-v flag), log either the match
	or the non-matching value.